k8s/local/backend-local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feats-backend-user-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feats-backend-user-auth
  template:
    metadata:
      labels:
        app: feats-backend-user-auth
    spec:
      containers:
        - name: feats-backend-user-auth
          image: feats-backend:latest
          imagePullPolicy: IfNotPresent # added so that minikube doesn't try to pull image from registry
          ports:
          - containerPort: 8089
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "256Mi"
              cpu: "100m"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: feats-backend-ingredient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feats-backend-ingredient
  template:
    metadata:
      labels:
        app: feats-backend-ingredient
    spec:
      containers:
        - name: feats-backend-ingredient
          image: feats-backend:latest
          imagePullPolicy: IfNotPresent # added so that minikube doesn't try to pull image from registry
          ports:
          - containerPort: 8090
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "256Mi"
              cpu: "100m"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: feats-backend-recipe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feats-backend-recipe
  template:
    metadata:
      labels:
        app: feats-backend-recipe
    spec:
      containers:
        - name: feats-backend-recipe
          image: feats-backend:latest
          imagePullPolicy: IfNotPresent # added so that minikube doesn't try to pull image from registry
          ports:
          - containerPort: 8091
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "256Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: feats-backend-user-auth
spec:
  selector:
    app: feats-backend-user-auth
  ports:
    - protocol: TCP
      port: 8089 # external port to be exposed
      targetPort: 8089
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: feats-backend-ingredient
spec:
  selector:
    app: feats-backend-ingredient
  ports:
    - protocol: TCP
      port: 8090 # external port to be exposed
      targetPort: 8089
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: feats-backend-recipe
spec:
  selector:
    app: feats-backend-recipe
  ports:
    - protocol: TCP
      port: 8091 # external port to be exposed
      targetPort: 8089
  type: ClusterIP
