k8s/local/frontend-local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feats-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feats-frontend
  template:
    metadata:
      labels:
        app: feats-frontend
    spec:
      containers:
      - name: feats-frontend
        image: feats-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: feats-frontend
spec:
  type: NodePort # to use LoadBalancer for prod workloads
  selector:
    app: feats-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
